; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netkey/extr_key.c_key_newsah2.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netkey/extr_key.c_key_newsah2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.secashead = type { i32 }
%struct.secasindex = type { i32 }

@sadb_mutex = common dso_local global i32 0, align 4
@LCK_MTX_ASSERT_OWNED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.secashead* @key_newsah2(%struct.secasindex* %0, i32 %1) #0 {
  %3 = alloca %struct.secashead*, align 8
  %4 = alloca %struct.secasindex*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.secashead*, align 8
  store %struct.secasindex* %0, %struct.secasindex** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* @sadb_mutex, align 4
  %8 = load i32, i32* @LCK_MTX_ASSERT_OWNED, align 4
  %9 = call i32 @LCK_MTX_ASSERT(i32 %7, i32 %8)
  %10 = load %struct.secasindex*, %struct.secasindex** %4, align 8
  %11 = call %struct.secashead* @key_getsah(%struct.secasindex* %10)
  store %struct.secashead* %11, %struct.secashead** %6, align 8
  %12 = load %struct.secashead*, %struct.secashead** %6, align 8
  %13 = icmp ne %struct.secashead* %12, null
  br i1 %13, label %18, label %14

14:                                               ; preds = %2
  %15 = load %struct.secasindex*, %struct.secasindex** %4, align 8
  %16 = load i32, i32* %5, align 4
  %17 = call %struct.secashead* @key_newsah(%struct.secasindex* %15, i32* null, i32 0, i32 %16)
  store %struct.secashead* %17, %struct.secashead** %3, align 8
  br label %20

18:                                               ; preds = %2
  %19 = load %struct.secashead*, %struct.secashead** %6, align 8
  store %struct.secashead* %19, %struct.secashead** %3, align 8
  br label %20

20:                                               ; preds = %18, %14
  %21 = load %struct.secashead*, %struct.secashead** %3, align 8
  ret %struct.secashead* %21
}

declare dso_local i32 @LCK_MTX_ASSERT(i32, i32) #1

declare dso_local %struct.secashead* @key_getsah(%struct.secasindex*) #1

declare dso_local %struct.secashead* @key_newsah(%struct.secasindex*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
